--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: python
 python:
-  - "3.7"
-
- install:
-  - pip install -r requirements.txt
- 
+    - '3.7'
+install:
+    - 'pip install -r requirements.txt'
 script:
-  - python3 -m tbip test/test.py -d tbip -o test/test_install.py
-  - python3 test/test_install.py
-  
-  
-  
+    - 'python3 -m tbip test/test.py -d tbip -o test/test_install.py'
+    - 'python3 test/test_install.py'
